# Prompt2Post

./: .gitignore  Dockerfile  README.md  README_STREAMLIT.md  app.py  app1.py  cli.py  pyproject.toml  requirements.txt  setup.sh  split.py  start_app.sh  test.py  test_fix.py  video_maker.py
.github/workflows/: main.yml
src/components/: ui_components.py
src/config/: settings.py
src/utils/: ai_services.py  helpers.py  video_processing.py
